# crispy-xmltv

./: Cargo.toml  README.md
src/: compression.rs  episode.rs  error.rs  lib.rs  parser.rs  timestamp.rs  types.rs  writer.rs
tests/: fidelity.rs
tests/fixtures/: rich_roundtrip.xml
