[package]
name = "crispy-xmltv"
description = "Streaming XMLTV/EPG parser for large files"
version = "0.2.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/moabualruz/crispy-xmltv"
homepage = "https://github.com/moabualruz/crispy-xmltv"
documentation = "https://docs.rs/crispy-xmltv"
readme = "README.md"
keywords = ["iptv", "xmltv", "epg", "parser", "tv-guide"]
categories = ["multimedia", "parser-implementations"]
rust-version = "1.85"

[dependencies]
crispy-iptv-types = "0.2.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
quick-xml = "0.37"
chrono = { version = "0.4", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
flate2 = "1"
xz2 = "0.1"
regex = "1"

[dev-dependencies]
serde_json = "1"
